[package]
name = "jupiter-common"
version = "0.1.0"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = { workspace = true }
solana-rpc-client = { workspace = true }
const-crypto = { workspace = true }
bincode = { workspace = true }
jupiter-amm-interface = { workspace = true }
anyhow = { workspace = true }